# botgate-stats-reporter-py

./: .gitignore  LICENSE  README.md  pyproject.toml
botgate_reporter/: __init__.py  reporter.py
botgate_stats_reporter_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
